Cros splitscreen - Make the shelf fully opaque when splitscreen is active.

Bug: 807106
Change-Id: I8ff4939634f919f7566b499985af89960fd6ab09
Reviewed-on: https://chromium-review.googlesource.com/954346
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542861}
Former-commit-id: bf3771f1df1ced327a7a3a34dd3c44e543de9244